--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/jest": "^28.1.6",
     "express": "^4.18.1",
-    "jest": "^28.1.3"
+    "jest": "^28.1.3",
+    "supertest": "^6.2.4"
   }
 }
